// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can override default props 1`] = `
<span
  class="p-tooltip--btm-left is-detached tooltip-class"
  data-testid="tooltip-portal"
  style="position: absolute; left: 0px; top: 0px;"
>
  <span
    class="p-tooltip__message"
    id="mock-nanoid-1"
    role="tooltip"
  >
    Tooltip
  </span>
</span>
`;

exports[`can override default props 2`] = `
<button
  aria-describedby="mock-nanoid-1"
  class="p-button--negative has-icon is-small button-class"
  type="button"
>
  <i
    class="icon-class p-icon--warning"
  />
</button>
`;

exports[`renders with default options correctly 1`] = `
<span
  class="p-tooltip--btm-left is-detached"
  data-testid="tooltip-portal"
  style="position: absolute; left: 0px; top: 0px;"
>
  <span
    class="p-tooltip__message"
    id="mock-nanoid-1"
    role="tooltip"
  >
    Tooltip
  </span>
</span>
`;

exports[`renders with default options correctly 2`] = `
<button
  aria-describedby="mock-nanoid-1"
  class="p-button--base has-icon is-small u-no-border u-no-line-height u-no-margin"
  type="button"
>
  <i
    class="p-icon--information"
  />
</button>
`;
